src/test/ui/typeck/typeck-default-trait-impl-assoc-type.stderr
error[E0277]: `<T as Trait>::AssocType` cannot be sent between threads safely
  --> $DIR/typeck-default-trait-impl-assoc-type.rs:11:5
   |
LL | fn bar<T:Trait+Send>() {
   |                       - If I were you, I would simply consider further restricting the associated type: `where <T as Trait>::AssocType: std::marker::Send`
LL |     is_send::<T::AssocType>();
   |     ^^^^^^^^^^^^^^^^^^^^^^^ `<T as Trait>::AssocType` cannot be sent between threads safely
...
LL | fn is_send<T:Send>() {
   |    -------   ---- required by this bound in `is_send`
   |
   = help: the trait `std::marker::Send` is not implemented for `<T as Trait>::AssocType`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
